--- a/atividades/ex0016 da aula 14/css/style.css
+++ b/atividades/ex0016 da aula 14/css/style.css
@@ -9,6 +9,7 @@ header{
 }
 
 section{
+    text-align: left;
     background: white;
     border-radius: 10px;
     padding: 15px;
@@ -18,21 +19,19 @@ section{
 }
 
 div{
-    padding: 10px 0px 10px 0px;
+    padding: 0px 0px 10px 0px;
+}
+p{
+    margin: 10px;
 }
 
 img{
-    padding: 10px;
     max-width: 200px;
     border-radius: 50%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto
 }
 
 footer{
-    padding-top: 10px;
-    position: static;
+    position: fixed;
     font-style: italic;
     left: 0;
     bottom: 0;
