--- a/atividades/ex0017 da aula 14/css/style.css
+++ b/atividades/ex0017 da aula 14/css/style.css
@@ -9,6 +9,7 @@ header{
 }
 
 section{
+    text-align: left;
     background: white;
     border-radius: 10px;
     padding: 15px;
@@ -22,17 +23,12 @@ div{
 }
 
 img{
-    padding: 10px;
     max-width: 200px;
     border-radius: 50%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto
 }
 
 footer{
-    padding-top: 10px;
-    position: static;
+    position: fixed;
     font-style: italic;
     left: 0;
     bottom: 0;
